<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/normal_spacing"
            android:textSize="@dimen/extra_large_text_size"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <EditText
                android:enabled="false"
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="text"
                android:singleLine="true"
                android:gravity="top"
                android:maxLines="1"
                tools:text="1873213324"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/black"
                android:layout_marginVertical="@dimen/large_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="text"
                android:singleLine="true"
                android:gravity="top"
                android:maxLines="1"
                android:hint="@string/hint_username"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/black"
                android:layout_marginVertical="@dimen/large_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:gravity="top"
                android:maxLines="1"
                android:hint="@string/hint_email"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/black"
                android:layout_marginVertical="@dimen/large_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <CheckBox
                android:layout_marginHorizontal="@dimen/large_spacing"
                android:id="@+id/checkBoxSetAsAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_set_user_as_an_admin"
                android:textSize="@dimen/small_text_size"
                android:paddingStart="@dimen/small_spacing"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            app:cornerRadius="@dimen/xlarge_spacing"
            android:text="@string/update_user_button_text"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:backgroundTint="@color/color_primary"
            android:paddingVertical="12dp"
            android:layout_marginTop="@dimen/large_spacing"
            android:layout_marginHorizontal="@dimen/large_spacing"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            app:cornerRadius="@dimen/xlarge_spacing"
            android:text="@string/cancel_button_text"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:backgroundTint="@color/color_primary"
            android:paddingVertical="12dp"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginHorizontal="@dimen/large_spacing"/>

    </LinearLayout>

</LinearLayout>



