<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/normal_spacing"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/large_spacing"
    app:cardElevation="@dimen/normal_spacing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/normal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit">

            <LinearLayout
                android:layout_marginHorizontal="@dimen/large_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/item_admin_title_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/title_id"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8137283946"
                    android:layout_marginStart="@dimen/large_spacing"
                    android:textSize="@dimen/medium_text_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/normal_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/item_admin_title_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/title_username"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Syahrul Gunawan"
                    android:layout_marginStart="@dimen/large_spacing"
                    android:textSize="@dimen/medium_text_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/normal_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/item_admin_title_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/title_email"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="syahrul22gunawan@gmail.com"
                    android:layout_marginStart="@dimen/large_spacing"
                    android:textSize="@dimen/medium_text_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/normal_spacing"
                android:layout_marginHorizontal="@dimen/large_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/item_admin_title_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/title_role"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textSize="@dimen/medium_text_size"/>

                <TextView
                    android:id="@+id/tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Admin"
                    android:layout_marginStart="@dimen/large_spacing"
                    android:textSize="@dimen/medium_text_size"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:background="@drawable/circle_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            
            <ImageView
                android:layout_margin="@dimen/space_medium"
                android:layout_width="@dimen/item_action_image_size"
                android:layout_height="@dimen/item_action_image_size"
                android:src="@drawable/ic_delete_white"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:background="@drawable/circle_edit"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_margin="@dimen/space_medium"
                android:layout_width="@dimen/item_action_image_size"
                android:layout_height="@dimen/item_action_image_size"
                android:src="@drawable/ic_edit_white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>